--- a/books/Pipfile
+++ b/books/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==2.2.3"
 psycopg2-binary = "==2.8.3"
 django-crispy-forms = "==1.7.1"
+django-allauth = "==0.38.0"
 
 [dev-packages]
 
